--- a/BOZ_App/public/css/app.css
+++ b/BOZ_App/public/css/app.css
@@ -783,11 +783,11 @@ select {
 .ml-2 {
   margin-left: 0.5rem;
 }
-.mt-5 {
-  margin-top: 1.25rem;
-}
 .mb-3 {
   margin-bottom: 0.75rem;
+}
+.mt-5 {
+  margin-top: 1.25rem;
 }
 .mb-1 {
   margin-bottom: 0.25rem;
@@ -819,11 +819,17 @@ select {
 .mt-20 {
   margin-top: 5rem;
 }
+.-mr-1 {
+  margin-right: -0.25rem;
+}
 .mt-6 {
   margin-top: 1.5rem;
 }
-.-mr-1 {
-  margin-right: -0.25rem;
+.ml-5 {
+  margin-left: 1.25rem;
+}
+.mr-4 {
+  margin-right: 1rem;
 }
 .box-border {
   box-sizing: border-box;
@@ -897,9 +903,6 @@ select {
 .w-\[300px\] {
   width: 300px;
 }
-.w-48 {
-  width: 12rem;
-}
 .w-8 {
   width: 2rem;
 }
@@ -933,14 +936,14 @@ select {
 .origin-top-left {
   transform-origin: top left;
 }
+.origin-center {
+  transform-origin: center;
+}
 .origin-top {
   transform-origin: top;
 }
 .origin-top-right {
   transform-origin: top right;
-}
-.origin-center {
-  transform-origin: center;
 }
 .rotate-45 {
   --tw-rotate: 45deg;
@@ -1015,9 +1018,6 @@ select {
 .gap-3 {
   gap: 0.75rem;
 }
-.self-start {
-  align-self: flex-start;
-}
 .overflow-auto {
   overflow: auto;
 }
@@ -1065,6 +1065,9 @@ select {
 .border-0 {
   border-width: 0px;
 }
+.border-b-8 {
+  border-bottom-width: 8px;
+}
 .border-b {
   border-bottom-width: 1px;
 }
@@ -1077,9 +1080,6 @@ select {
 .border-r {
   border-right-width: 1px;
 }
-.border-b-8 {
-  border-bottom-width: 8px;
-}
 .border-solid {
   border-style: solid;
 }
@@ -1090,6 +1090,10 @@ select {
 .border-pickled-bluewood {
   --tw-border-opacity: 1;
   border-color: rgb(47 72 88 / var(--tw-border-opacity));
+}
+.border-slate-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(226 232 240 / var(--tw-border-opacity));
 }
 .border-gray-200 {
   --tw-border-opacity: 1;
@@ -1121,10 +1125,6 @@ select {
 .border-teal-500 {
   --tw-border-opacity: 1;
   border-color: rgb(20 184 166 / var(--tw-border-opacity));
-}
-.border-slate-200 {
-  --tw-border-opacity: 1;
-  border-color: rgb(226 232 240 / var(--tw-border-opacity));
 }
 .border-b-pickled-bluewood {
   --tw-border-opacity: 1;
@@ -1278,9 +1278,6 @@ select {
 }
 .pb-6 {
   padding-bottom: 1.5rem;
-}
-.pt-1 {
-  padding-top: 0.25rem;
 }
 .pt-6 {
   padding-top: 1.5rem;
@@ -1553,11 +1550,11 @@ select {
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.ease-out {
-  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
-}
 .ease-in {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+}
+.ease-out {
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 #nav-toggle:checked ~ nav {
     display: block;
@@ -1618,6 +1615,10 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }
+.hover\:bg-slate-200:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+}
 .hover\:bg-paradiso-dark:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(52 120 134 / var(--tw-bg-opacity));
@@ -1629,10 +1630,6 @@ select {
 .hover\:bg-gray-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-}
-.hover\:bg-slate-200:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
 }
 .hover\:text-gray-500:hover {
   --tw-text-opacity: 1;
@@ -1793,10 +1790,6 @@ select {
   }
 }
 @media (min-width: 640px) {
-
-  .sm\:ml-6 {
-    margin-left: 1.5rem;
-  }
 
   .sm\:ml-0 {
     margin-left: 0px;
