--- a/BOZ_App/public/css/app.css
+++ b/BOZ_App/public/css/app.css
@@ -686,6 +686,30 @@ select {
 .bottom-14 {
   bottom: 3.5rem;
 }
+.left-\[25px\] {
+  left: 25px;
+}
+.bottom-\[325px\] {
+  bottom: 325px;
+}
+.bottom-\[352px\] {
+  bottom: 352px;
+}
+.bottom-\[350px\] {
+  bottom: 350px;
+}
+.bottom-\[70px\] {
+  bottom: 70px;
+}
+.bottom-\[75px\] {
+  bottom: 75px;
+}
+.bottom-\[100px\] {
+  bottom: 100px;
+}
+.bottom-\[80px\] {
+  bottom: 80px;
+}
 .z-0 {
   z-index: 0;
 }
@@ -917,6 +941,24 @@ select {
 }
 .w-1\/5 {
   width: 20%;
+}
+.w-\[400px\] {
+  width: 400px;
+}
+.w-\[500px\] {
+  width: 500px;
+}
+.w-\[50px\] {
+  width: 50px;
+}
+.w-\[\] {
+  width: ;
+}
+.w-\[75px\] {
+  width: 75px;
+}
+.w-\[55px\] {
+  width: 55px;
 }
 .max-w-7xl {
   max-width: 80rem;
@@ -1183,6 +1225,14 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(153 27 27 / var(--tw-bg-opacity));
 }
+.bg-green-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
 .bg-opacity-30 {
   --tw-bg-opacity: 0.3;
 }
@@ -1204,6 +1254,15 @@ select {
 }
 .p-6 {
   padding: 1.5rem;
+}
+.p-5 {
+  padding: 1.25rem;
+}
+.p-10 {
+  padding: 2.5rem;
+}
+.p-8 {
+  padding: 2rem;
 }
 .px-4 {
   padding-left: 1rem;
@@ -1624,6 +1683,26 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
 }
+.hover\:bg-blue-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
+}
+.hover\:bg-green-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(21 128 61 / var(--tw-bg-opacity));
+}
+.hover\:bg-green-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
+}
+.hover\:bg-red-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+.hover\:bg-paradiso-light:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(58 145 151 / var(--tw-bg-opacity));
+}
 .hover\:text-gray-500:hover {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -1975,6 +2054,10 @@ select {
     width: auto;
   }
 
+  .md\:w-\[500px\] {
+    width: 500px;
+  }
+
   .md\:min-w-\[55\%\] {
     min-width: 55%;
   }
@@ -2213,6 +2296,14 @@ select {
 
   .xl\:inline {
     display: inline;
+  }
+
+  .xl\:w-\[\] {
+    width: ;
+  }
+
+  .xl\:w-\[500px\] {
+    width: 500px;
   }
 }
 
