--- a/BOZ_App/public/css/app.css
+++ b/BOZ_App/public/css/app.css
@@ -1670,6 +1670,10 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(58 145 151 / var(--tw-bg-opacity));
 }
+.hover\:bg-casal:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(50 95 112 / var(--tw-bg-opacity));
+}
 .hover\:text-gray-500:hover {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
