--- a/BOZ_App/public/css/app.css
+++ b/BOZ_App/public/css/app.css
@@ -677,6 +677,9 @@ select {
 .left-10 {
   left: 2.5rem;
 }
+.right-0 {
+  right: 0px;
+}
 .left-0 {
   left: 0px;
 }
@@ -685,9 +688,6 @@ select {
 }
 .bottom-14 {
   bottom: 3.5rem;
-}
-.right-0 {
-  right: 0px;
 }
 .bottom-\[80px\] {
   bottom: 80px;
@@ -801,6 +801,21 @@ select {
 .ml-auto {
   margin-left: auto;
 }
+.ml-1 {
+  margin-left: 0.25rem;
+}
+.ml-4 {
+  margin-left: 1rem;
+}
+.mt-8 {
+  margin-top: 2rem;
+}
+.ml-12 {
+  margin-left: 3rem;
+}
+.-mt-px {
+  margin-top: -1px;
+}
 .mt-0\.5 {
   margin-top: 0.125rem;
 }
@@ -815,21 +830,6 @@ select {
 }
 .mt-6 {
   margin-top: 1.5rem;
-}
-.ml-4 {
-  margin-left: 1rem;
-}
-.ml-1 {
-  margin-left: 0.25rem;
-}
-.mt-8 {
-  margin-top: 2rem;
-}
-.ml-12 {
-  margin-left: 3rem;
-}
-.-mt-px {
-  margin-top: -1px;
 }
 .box-border {
   box-sizing: border-box;
@@ -870,6 +870,9 @@ select {
 .h-60 {
   height: 15rem;
 }
+.h-8 {
+  height: 2rem;
+}
 .h-16 {
   height: 4rem;
 }
@@ -885,8 +888,14 @@ select {
 .h-3\/4 {
   height: 75%;
 }
-.h-8 {
-  height: 2rem;
+.h-1\/2 {
+  height: 50%;
+}
+.h-1\/4 {
+  height: 25%;
+}
+.h-1\/3 {
+  height: 33.333333%;
 }
 .min-h-128 {
   min-height: 32rem;
@@ -906,6 +915,12 @@ select {
 .w-\[50px\] {
   width: 50px;
 }
+.w-8 {
+  width: 2rem;
+}
+.w-auto {
+  width: auto;
+}
 .w-12 {
   width: 3rem;
 }
@@ -921,11 +936,20 @@ select {
 .w-\[300px\] {
   width: 300px;
 }
-.w-8 {
-  width: 2rem;
+.w-1\/2 {
+  width: 50%;
 }
-.w-auto {
-  width: auto;
+.w-1 {
+  width: 0.25rem;
+}
+.w-1\/3 {
+  width: 33.333333%;
+}
+.w-1\/4 {
+  width: 25%;
+}
+.w-1\/6 {
+  width: 16.666667%;
 }
 .max-w-xl {
   max-width: 36rem;
@@ -1000,6 +1024,9 @@ select {
 .flex-col {
   flex-direction: column;
 }
+.flex-col-reverse {
+  flex-direction: column-reverse;
+}
 .flex-wrap {
   flex-wrap: wrap;
 }
@@ -1071,17 +1098,17 @@ select {
 .border-b-8 {
   border-bottom-width: 8px;
 }
-.border-b {
-  border-bottom-width: 1px;
-}
-.border-l-4 {
-  border-left-width: 4px;
-}
 .border-t {
   border-top-width: 1px;
 }
 .border-r {
   border-right-width: 1px;
+}
+.border-b {
+  border-bottom-width: 1px;
+}
+.border-l-4 {
+  border-left-width: 4px;
 }
 .border-solid {
   border-style: solid;
@@ -1094,6 +1121,10 @@ select {
   --tw-border-opacity: 1;
   border-color: rgb(47 72 88 / var(--tw-border-opacity));
 }
+.border-puerto-rico {
+  --tw-border-opacity: 1;
+  border-color: rgb(68 182 154 / var(--tw-border-opacity));
+}
 .border-slate-200 {
   --tw-border-opacity: 1;
   border-color: rgb(226 232 240 / var(--tw-border-opacity));
@@ -1101,13 +1132,17 @@ select {
 .border-transparent {
   border-color: transparent;
 }
-.border-fountain-blue {
-  --tw-border-opacity: 1;
-  border-color: rgb(97 196 173 / var(--tw-border-opacity));
-}
 .border-gray-200 {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+.border-gray-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
+}
+.border-fountain-blue {
+  --tw-border-opacity: 1;
+  border-color: rgb(97 196 173 / var(--tw-border-opacity));
 }
 .border-white {
   --tw-border-opacity: 1;
@@ -1125,14 +1160,6 @@ select {
   --tw-border-opacity: 1;
   border-color: rgb(129 140 248 / var(--tw-border-opacity));
 }
-.border-puerto-rico {
-  --tw-border-opacity: 1;
-  border-color: rgb(68 182 154 / var(--tw-border-opacity));
-}
-.border-gray-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(156 163 175 / var(--tw-border-opacity));
-}
 .border-b-pickled-bluewood {
   --tw-border-opacity: 1;
   border-bottom-color: rgb(47 72 88 / var(--tw-border-opacity));
@@ -1141,13 +1168,17 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
+.bg-cosmic-latte {
+  --tw-bg-opacity: 1;
+  background-color: rgb(223 243 238 / var(--tw-bg-opacity));
+}
 .bg-pickled-bluewood {
   --tw-bg-opacity: 1;
   background-color: rgb(47 72 88 / var(--tw-bg-opacity));
 }
-.bg-gray-200 {
+.bg-puerto-rico {
   --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+  background-color: rgb(68 182 154 / var(--tw-bg-opacity));
 }
 .bg-green-500 {
   --tw-bg-opacity: 1;
@@ -1173,13 +1204,13 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
-.bg-tradewind {
-  --tw-bg-opacity: 1;
-  background-color: rgb(72 171 164 / var(--tw-bg-opacity));
-}
 .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+.bg-tradewind {
+  --tw-bg-opacity: 1;
+  background-color: rgb(72 171 164 / var(--tw-bg-opacity));
 }
 .bg-paradiso-dark {
   --tw-bg-opacity: 1;
@@ -1196,14 +1227,6 @@ select {
 .bg-red-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(153 27 27 / var(--tw-bg-opacity));
-}
-.bg-cosmic-latte {
-  --tw-bg-opacity: 1;
-  background-color: rgb(223 243 238 / var(--tw-bg-opacity));
-}
-.bg-puerto-rico {
-  --tw-bg-opacity: 1;
-  background-color: rgb(68 182 154 / var(--tw-bg-opacity));
 }
 .bg-indigo-50 {
   --tw-bg-opacity: 1;
@@ -1286,6 +1309,9 @@ select {
 .pt-10 {
   padding-top: 2.5rem;
 }
+.pt-8 {
+  padding-top: 2rem;
+}
 .pb-6 {
   padding-bottom: 1.5rem;
 }
@@ -1297,9 +1323,6 @@ select {
 }
 .pr-4 {
   padding-right: 1rem;
-}
-.pt-8 {
-  padding-top: 2rem;
 }
 .text-center {
   text-align: center;
@@ -1411,6 +1434,18 @@ select {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
+.text-gray-200 {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
+}
+.text-gray-300 {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
 .text-blue-800 {
   --tw-text-opacity: 1;
   color: rgb(30 64 175 / var(--tw-text-opacity));
@@ -1430,18 +1465,6 @@ select {
 .text-indigo-700 {
   --tw-text-opacity: 1;
   color: rgb(67 56 202 / var(--tw-text-opacity));
-}
-.text-gray-200 {
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
-}
-.text-gray-300 {
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
-}
-.text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 .underline {
   -webkit-text-decoration-line: underline;
@@ -1942,6 +1965,10 @@ select {
 
   .md\:w-72 {
     width: 18rem;
+  }
+
+  .md\:w-1\/6 {
+    width: 16.666667%;
   }
 
   .md\:min-w-\[55\%\] {
